--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,6 +1,5 @@
 test_company:
-    resource: "@TestCompanyBundle/Controller/"
-    type:     annotation
+    resource: "@TestCompanyBundle/Resources/config/routing.yml"
 
 app:
     resource: "@AppBundle/Controller/"
@@ -8,3 +7,7 @@ app:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+    
+NelmioApiDocBundle:
+    resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+    prefix:   /api/doc
