--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "friendsofsymfony/user-bundle": "~2.0@dev",
         "willdurand/propel-typehintable-behavior": "^1.0",
         "doctrine/doctrine-migrations-bundle": "^1.0",
-        "friendsofsymfony/rest-bundle": "1.6.*"
+        "friendsofsymfony/rest-bundle": "1.6.*",
+        "nelmio/api-doc-bundle": "2.10.*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
