--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -105,6 +105,6 @@ fos_rest:
         
     format_listener:
         rules:
-            - { path: '^/', fallback_format: ~, prefer_extension: false, priorities: ['json'] }
+            - { path: '^/', fallback_format: ~, prefer_extension: false, priorities: ['json', 'html'] }
             
 nelmio_api_doc: ~
