--- a/src/Test/Bundle/CompanyBundle/Resources/config/routing.yml
+++ b/src/Test/Bundle/CompanyBundle/Resources/config/routing.yml
@@ -5,3 +5,8 @@ test_company_rest:
 companies:
     type:     rest
     resource: Test\Bundle\CompanyBundle\Controller\CompanyController
+
+offices:
+    type:     rest
+    parent:   companies
+    resource: Test\Bundle\CompanyBundle\Controller\OfficeController
