--- a/src/Test/Bundle/CompanyBundle/Resources/config/services.yml
+++ b/src/Test/Bundle/CompanyBundle/Resources/config/services.yml
@@ -13,3 +13,11 @@ services:
         
     test.apcu_cache:    
         class:     Doctrine\Common\Cache\ApcuCache
+
+
+    command.oauth_create_client:
+        class: Test\Bundle\CompanyBundle\Command\OAuthCreateClientCommand
+        arguments:
+            - @fos_oauth_server.client_manager.default
+        tags:
+            -  { name: console.command }
