--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "willdurand/propel-typehintable-behavior": "^1.0",
         "doctrine/doctrine-migrations-bundle": "^1.0",
         "friendsofsymfony/rest-bundle": "1.6.*",
-        "nelmio/api-doc-bundle": "2.10.*"
+        "nelmio/api-doc-bundle": "2.10.*",
+        "friendsofsymfony/oauth-server-bundle": "1.4.*",
+        "jms/serializer-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
