--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -95,11 +95,13 @@ doctrine_migrations:
 fos_rest:
     view:
         formats:
+            json: true
             html: true
         templating_formats:
             json: false
         force_redirects:
             html: true
+            json: true
         failed_validation: HTTP_BAD_REQUEST
         default_engine: twig
         view_response_listener: 'force'
