controllers update, config
rest api + web

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -104,7 +104,7 @@ fos_rest:
             json: true
         failed_validation: HTTP_BAD_REQUEST
         default_engine: twig
-        view_response_listener: 'force'
+        view_response_listener: true
         
     format_listener:
         rules:
@@ -141,3 +141,4 @@ fos_oauth_server:
 sensio_framework_extra:
     view:
         annotations: false
+    router:  { annotations: true }
