--- a/src/Test/Bundle/CompanyBundle/Resources/config/routing.yml
+++ b/src/Test/Bundle/CompanyBundle/Resources/config/routing.yml
@@ -1,13 +1,5 @@
-test_company:
-    resource: Test\Bundle\CompanyBundle\Controller\CompanyController
-    type:     annotation
-
-test_office:
-    resource: Test\Bundle\CompanyBundle\Controller\OfficeController
-    type:     annotation
-    
-test_opening_hours:
-    resource: Test\Bundle\CompanyBundle\Controller\OpeningHoursController
+test_web:
+    resource: "@TestCompanyBundle/Controller/Web"
     type:     annotation
 
 #rest api
@@ -17,19 +9,19 @@ test_company_rest:
     type:     annotation
     prefix:   /api
 
-companies:
-    type:     rest
-    resource: Test\Bundle\CompanyBundle\Controller\Api\CompanyController
-    prefix:   /api
-
-offices:
-    type:     rest
-    parent:   companies
-    resource: Test\Bundle\CompanyBundle\Controller\Api\OfficeController
-    prefix:   /api
-    
-opening_hours:
-    type:     rest
-    parent:   offices
-    resource: Test\Bundle\CompanyBundle\Controller\Api\OpeningHoursController
-    prefix:   /api
+#companies:
+#    type:     rest
+#    resource: Test\Bundle\CompanyBundle\Controller\Api\CompanyController
+#    prefix:   /api
+#
+#offices:
+#    type:     rest
+#    parent:   companies
+#    resource: Test\Bundle\CompanyBundle\Controller\Api\OfficeController
+#    prefix:   /api
+#    
+#opening_hours:
+#    type:     rest
+#    parent:   offices
+#    resource: Test\Bundle\CompanyBundle\Controller\Api\OpeningHoursController
+#    prefix:   /api
