--- a/src/Test/Bundle/CompanyBundle/Resources/config/routing.yml
+++ b/src/Test/Bundle/CompanyBundle/Resources/config/routing.yml
@@ -9,19 +9,17 @@ test_company_rest:
     type:     annotation
     prefix:   /api
 
-#companies:
-#    type:     rest
-#    resource: Test\Bundle\CompanyBundle\Controller\Api\CompanyController
-#    prefix:   /api
-#
-#offices:
-#    type:     rest
-#    parent:   companies
-#    resource: Test\Bundle\CompanyBundle\Controller\Api\OfficeController
-#    prefix:   /api
-#    
-#opening_hours:
-#    type:     rest
-#    parent:   offices
-#    resource: Test\Bundle\CompanyBundle\Controller\Api\OpeningHoursController
-#    prefix:   /api
+companies:
+    type:     rest
+    resource: Test\Bundle\CompanyBundle\Controller\Api\CompanyController
+    prefix:   /api
+
+offices:
+    type:     rest
+    parent:   companies
+    resource: Test\Bundle\CompanyBundle\Controller\Api\OfficeController
+    
+opening_hours:
+    type:     rest
+    parent:   offices
+    resource: Test\Bundle\CompanyBundle\Controller\Api\OpeningHoursController
