--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -6,7 +6,11 @@
 
 class_name: AcceptanceTester
 modules:
-    enabled:
-        - PhpBrowser:
-            url: http://localhost/myapp
-        - \Helper\Acceptance
+    config:
+        Symfony2:
+            app_path: 'app'
+            var_path: 'app'
+        PhpBrowser:
+            url: http://project1.lh/app_dev.php/
+            depends: Symfony2
+    enabled: [PhpBrowser, Helper\Acceptance]
