--- a/tests/functional.suite.yml
+++ b/tests/functional.suite.yml
@@ -6,6 +6,14 @@
 
 class_name: FunctionalTester
 modules:
-    enabled:
-        # add framework module here
+    config:
+        PhpBrowser:
+            url: 'http://project1.lh:80'
+            headers:
+                env: test
+    enabled: 
+        - Symfony
+        - Doctrine2:
+            depends: Symfony
         - \Helper\Functional
+    
