--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,7 @@
         "friendsofsymfony/rest-bundle": "1.6.*",
         "nelmio/api-doc-bundle": "2.10.*",
         "friendsofsymfony/oauth-server-bundle": "1.5.*",
-        "jms/serializer-bundle": "dev-master",
-        "codeception/codeception": "^2.2"
+        "jms/serializer-bundle": "dev-master"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
