--- a/tests/api.suite.yml
+++ b/tests/api.suite.yml
@@ -1,13 +1,11 @@
 class_name: ApiTester
 modules:
     config:
-        Symfony:
-            app_path: 'app'
-            var_path: 'app'
-        PhpBrowser:
-            url: http://project1.lh/app_dev.php/
-            port: json
+        Symfony2:
+            url: 'http://project1.lh/app_web.php'
         REST:
-            url: /api/
-            depends: Symfony
-    enabled: [REST, Helper\ApiHelper]
+            url: '/api'
+            depends: Symfony2
+    enabled:
+        - REST
+        - \Helper\Api
