--- a/tests/acceptance.suite.yml
+++ b/tests/acceptance.suite.yml
@@ -6,7 +6,9 @@
 
 class_name: AcceptanceTester
 modules:
+    config:
+        Symfony2:
+            url: 'http://project1.lh/app_dev.php'
     enabled:
-        - PhpBrowser:
-            url: http://localhost/myapp
+        - Symfony2
         - \Helper\Acceptance
